# DESImpl

./: CMakeLists.txt  main.cpp
DESChat/: HELP.md  pom.xml
DESChat/src/main/java/com/qq/tars/protocol/tars/: TarsInputStream.java
DESChat/src/main/java/org/gtdev/webapps/deschat/: DesChatApplication.java
DESChat/src/main/java/org/gtdev/webapps/deschat/config/: networkCfg.java
DESChat/src/main/java/org/gtdev/webapps/deschat/controllers/: DESController.java  LoginController.java
DESChat/src/main/java/org/gtdev/webapps/deschat/network/: ConnMgr.java  MsgPack.java  NetPack.java  ProtoDisplayer.java  SvcHandler.java  recvThread.java  utils.java
DESChat/src/main/java/org/gtdev/webapps/deschat/network/DChatMsg/: Msg.java  MsgHead.java  MsgType.java
DESChat/src/main/java/org/gtdev/webapps/deschat/network/functions/: Send.java
DESChat/src/main/resources/: application.properties
DESChat/src/test/java/org/gtdev/webapps/deschat/: DesChatApplicationTests.java
core/: CMakeLists.txt
core/include/: des.h  fileEnc.h  hexutil.h  sha256.h
core/src/: desEnc.cpp  fileEnc.cpp  genKey.cpp  hexutil.cpp  ip_fp.cpp  sha256.cpp
jni/: CMakeLists.txt  bind.cpp  org_gtdev_webapps_deschat_controllers_DESController.h
