cmake_minimum_required(VERSION 3.7)
project(desjni)
find_package(JNI)
if (JNI_FOUND)
    message (STATUS "JNI_INCLUDE_DIRS=${JNI_INCLUDE_DIRS}")
    message (STATUS "JNI_LIBRARIES=${JNI_LIBRARIES}")
endif()
add_library(desjni SHARED bind.cpp)
target_include_directories(desjni PUBLIC ${JNI_INCLUDE_DIRS})
target_include_directories(desjni PUBLIC ${descore_SOURCE_DIR}/include)
target_link_libraries(desjni ${JNI_LIBRARIES})
target_link_libraries(desjni descore)